Add hacker image as static file

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,6 @@
 	<title>Profile</title>
 </head>
 <body>
-	<img src="https://i.kym-cdn.com/entries/icons/original/000/021/807/ig9OoyenpxqdCQyABmOQBZDI0duHk2QZZmWg2Hxd4ro.jpg" height="600" width="800">
+	<img src="/static/imgs/hackerman.jpg" height="600" width="800">
 </body>
 </html>
