Add labels for form fields

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,10 @@
 <body>
 	<h1>EvilCorp Login</h1>
 	<p id="error-message"></p>
+	<label for="username">Username:</label>
 	<input id="username" name="username">
 	<br>
+	<label for="password">Password:</label>
 	<input id="password" name="password" type="password">
 	<br>
 	<button id="submit">Submit</button>
