Add styling to login page and header to profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
 	<title>Profile</title>
 </head>
 <body>
+	<h1>You're In</h1>
 	<img src="/static/imgs/hackerman.jpg" height="600" width="800">
 </body>
 </html>
