--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,19 @@
 <html>
 <head>
 	<title>EvilCorp</title>
+	<style>
+		#error-message {
+			color: red;
+		}
+
+		input {
+			margin-bottom: 10px;
+		}
+	</style>
 </head>
 <body>
 	<h1>EvilCorp Login</h1>
+	<h2>For Internal Users Only!</h2>
 	<p id="error-message"></p>
 	<label for="username">Username:</label>
 	<input id="username" name="username">
@@ -21,15 +31,13 @@
 			var password = document.getElementById('password').value;
 
 			fetch('http://127.0.0.1:5000/login', {
-				method: 'POST', // *GET, POST, PUT, DELETE, etc.
-				headers: {
-					'Content-Type': 'application/x-www-form-urlencoded',
-				},
+				method: 'POST',
+				headers: {'Content-Type': 'application/x-www-form-urlencoded'},
 				body: 'username=' + username + '&password=' + password // body data type must match "Content-Type" header
 			}).then((response) => {
 				errorMessage.innerText = '';
 				if (response.ok) {
-					window.location.replace("http://127.0.0.1:5000/profile");
+					window.location.href = 'http://127.0.0.1:5000/profile';
 				} else if (response.status === 404 ) {
 					errorMessage.innerText = 'Could not find a user with that username';
 				} else if (response.status === 403) {
