--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,8 @@
 	<title>Profile</title>
 </head>
 <body>
-	<h1>You're In</h1>
+	<h1>You're In!</h1>
+    <h2>Now logged in as {{ username }}</h2>
 	<img src="/static/imgs/hackerman.jpg" height="600" width="800">
 </body>
 </html>
